<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_header"
        >

        <SwitchPreferenceCompat
            app:key="@string/receive_info_key"
            app:title="@string/receive_info_title"
            android:summaryOn="@string/receive_info_summ_on"
            android:summaryOff="@string/receive_info_summ_off"/>


        <ListPreference
            android:summary="Toast"
            app:dependency="@string/receive_info_key"
            app:entries="@array/pref_info_entries"
            app:entryValues="@array/pref_info_values"
            app:key="@string/info_type_key"
            app:title="@string/info_type_title" />


    </PreferenceCategory>

</PreferenceScreen>